1g tomcat jvm